Organizando o código Iniciando configuração padrão do proxy

--- a/rebar.config
+++ b/rebar.config
@@ -8,8 +8,10 @@
   [{i, "include"},
   %%native,
    %%fail_on_warning,
+   warn_missing_spec,
    debug_info]}.
-{clean_files,
-   ["ebin/*", "doc/*"]}.
+{clean_files, ["*.eunit", "ebin/*.beam"]}.
+{eunit_opts, [verbose,
+     {report, {eunit_surefire, [{dir, "."}]}}]}.
 {sub_dirs, ["apps/agilitycache", "rel"]}.
 
