Proxy funcional   900Mbps com 1 cliente do polygraph (0 to 100KB)

--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,8 @@
 ]}.
 {erl_opts, 
   [{i, "include"},
-  %%native,
+  bin_opt_info,
+  native,
    %%fail_on_warning,
    warn_missing_spec,
    debug_info]}.
