--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
 {erl_opts, 
  [{i, "include"},
   bin_opt_info,
-  native,
+  %%native,
   %%fail_on_warning,
   warn_missing_spec,
   debug_info]}.
