--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {cover_enabled, true}.
 {lib_dirs,["deps"]}.
 {deps, [
-	{cowboy, "0.3.*",
-	 {git, "git://github.com/extend/cowboy.git", "HEAD"}}
+	{cowboy, "0.3.*", {git, "git://github.com/extend/cowboy.git", "HEAD"}},
+  {folsom, ".*"   , {git, "git://github.com/boundary/folsom"  , "master"}}
        ]}.
 {erl_opts, 
  [{i, "include"},
