--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -7,6 +7,7 @@
          sasl,
          %% Required applications                  
          cowboy,
+         folsom,
          %% Project specific applications
          agilitycache
         ]},
@@ -32,4 +33,5 @@
            {copy, "files/mynode", "bin/mynode"},
            {copy, "files/app.config", "etc/app.config"},
            {copy, "files/vm.args", "etc/vm.args"}
+           %{copy, "files/erl_inetrc", "etc/erl_inetrc"}
            ]}.
