Criado as funções para selecionar plugins
Decidi passar a função conjuntamente para evitar
duplicação de código

--- a/rebar.config
+++ b/rebar.config
@@ -14,5 +14,5 @@
 {clean_files, ["*.eunit", "ebin/*.beam"]}.
 {eunit_opts, [verbose,
 	      {report, {eunit_surefire, [{dir, "."}]}}]}.
-{sub_dirs, ["apps/agilitycache", "rel"]}.
+{sub_dirs, ["apps/agilitycache", "apps/agilitycache_plugins", "rel"]}.
 
