--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -9,7 +9,8 @@
          cowboy,
          folsom,
          %% Project specific applications
-         agilitycache
+         agilitycache,
+         agilitycache_plugins
         ]},
        {rel, "start_clean", "",
         [
@@ -21,7 +22,8 @@
        {excl_sys_filters, ["^bin/.*",
                            "^erts.*/bin/(dialyzer|typer)"]},
        {app, sasl, [{incl_cond, include}]},
-       {app, agilitycache, [{incl_cond, include}]}
+       {app, agilitycache, [{incl_cond, include}]},
+       {app, agilitycache_plugins, [{incl_cond, include}]}
       ]}.
 
 {target_dir, "mynode"}.
