Add lager, and reworks pre-cache logic
This add lager as the default logger (for sasl error_logger too);
This moves some logic between modules, to make it more explicit
what each module should do. http_protocol shouldn't manage cache logic,
that's why I created http_client in first place.

--- a/rebar.config
+++ b/rebar.config
@@ -1,18 +1,25 @@
+%% vim: set ft=erlang :
 {cover_enabled, true}.
 {lib_dirs,["deps"]}.
 {deps, [
 	{cowboy, "0.3.*", {git, "git://github.com/extend/cowboy.git", "HEAD"}},
-  {folsom, ".*"   , {git, "git://github.com/boundary/folsom"  , "master"}}
+  {folsom, ".*"   , {git, "git://github.com/boundary/folsom"  , "master"}},
+  {lager, ".*"    , {git, "git://github.com/basho/lager.git"  , "master"}}
        ]}.
-{erl_opts, 
+{erl_opts,
  [{i, "include"},
   bin_opt_info,
   %%native,
   %%fail_on_warning,
   warn_missing_spec,
-  debug_info]}.
+  debug_info,
+  {parse_transform, lager_transform}
+ ]
+}.
 {clean_files, ["*.eunit", "ebin/*.beam"]}.
 {eunit_opts, [verbose,
 	      {report, {eunit_surefire, [{dir, "."}]}}]}.
 {sub_dirs, ["apps/agilitycache", "apps/agilitycache_plugins", "rel"]}.
 
+%% Behaviours:
+{erl_first_files, ["apps/agilitycache/src/agilitycache_cache_plugin.erl"]}.
