--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,3 +1,4 @@
+% vim: set ft=erlang :
 {sys, [
        {lib_dirs, ["../apps", "../deps"]},
        {rel, "mynode", "3.0.0",
@@ -5,7 +6,7 @@
          kernel,
          stdlib,
          sasl,
-         %% Required applications                  
+         %% Required applications
          cowboy,
          folsom,
          %% Project specific applications
@@ -22,6 +23,7 @@
        {excl_sys_filters, ["^bin/.*",
                            "^erts.*/bin/(dialyzer|typer)"]},
        {app, sasl, [{incl_cond, include}]},
+       {app, lager, [{incl_cond, include}]},
        {app, agilitycache, [{incl_cond, include}]},
        {app, agilitycache_plugins, [{incl_cond, include}]}
       ]}.
