Adicionando cleanup inicial da tabela de arquivos em transito

--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,8 @@
   {lager, ".*"    , {git, "git://github.com/basho/lager.git"  , "master"}}
        ]}.
 {erl_opts,
- [{i, "include"},
+ [
+  {i, "apps"},
   bin_opt_info,
   %%native,
   %%fail_on_warning,
