Updates cowboy version

--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,14 @@
+%% -*- mode: erlang; -*-
 %% vim: set ft=erlang :
 {cover_enabled, true}.
 {lib_dirs,["deps"]}.
 {deps, [
-	{cowboy, "0.3.*", {git, "git://github.com/extend/cowboy.git", "HEAD"}},
-  {folsom, ".*"   , {git, "git://github.com/boundary/folsom"  , "master"}},
-  {lager, ".*"    , {git, "git://github.com/basho/lager.git"  , "master"}}
+        {cowboy, "0.6.*",
+         {git, "git://github.com/extend/cowboy.git", "master"}},
+        {folsom, ".*",
+         {git, "git://github.com/boundary/folsom"  , "master"}},
+        {lager, ".*",
+         {git, "git://github.com/basho/lager.git"  , "master"}}
        ]}.
 {erl_opts,
  [
@@ -12,14 +16,14 @@
   bin_opt_info,
   %%native,
   %%fail_on_warning,
-  warn_missing_spec,
+  %%warn_missing_spec,
   debug_info,
   {parse_transform, lager_transform}
  ]
 }.
 {clean_files, ["*.eunit", "ebin/*.beam"]}.
 {eunit_opts, [verbose,
-	      {report, {eunit_surefire, [{dir, "."}]}}]}.
+              {report, {eunit_surefire, [{dir, "."}]}}]}.
 {sub_dirs, ["apps/agilitycache", "apps/agilitycache_plugins", "rel"]}.
 
 %% Behaviours:
