Correct generated release startup

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -8,7 +8,7 @@
          sasl,
          %% Required applications
          cowboy,
-         folsom,
+         %folsom,
          %% Project specific applications
          agilitycache,
          agilitycache_plugins
