Add ranch dependency

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -7,7 +7,7 @@
          stdlib,
          sasl,
          %% Required applications
-         cowboy,
+         ranch,
          %folsom,
          %% Project specific applications
          agilitycache,
