--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,9 @@
 %% -*- mode: erlang; -*-
 %% vim: set ft=erlang :
-{cover_enabled, true}.
 {lib_dirs,["deps"]}.
 {deps, [
-        {cowboy, "0.6.*",
-         {git, "git://github.com/extend/cowboy.git", "master"}},
+        {ranch, "0.6.*",
+         {git, "git://github.com/AgilityTeam/ranch.git", "master"}},
         {folsom, ".*",
          {git, "git://github.com/boundary/folsom"  , "master"}},
         {lager, ".*",
