Adding qdate dependency

--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,9 @@
         {folsom, ".*",
          {git, "git://github.com/boundary/folsom"  , "master"}},
         {lager, ".*",
-         {git, "git://github.com/basho/lager.git"  , "master"}}
+         {git, "git://github.com/basho/lager.git"  , "master"}},
+        {qdate, ".*",
+         {git, "git://github.com/choptastic/qdate.git", "master"}}
        ]}.
 {erl_opts,
  [
