Adding qdate application startup

--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -8,6 +8,7 @@
          sasl,
          %% Required applications
          ranch,
+         qdate,
          %folsom,
          %% Project specific applications
          agilitycache,
